--- a/HW3/HW3_Tananaiska.ipynb
+++ b/HW3/HW3_Tananaiska.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "35640f12-fdcd-4610-b083-f9a6bc93cf5d",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "4  Estimates  Ethiopia           231          910  1950   18128.030"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "166f0a08-4dec-4824-85ad-c03a227ad976",
    "metadata": {},
    "outputs": [],
@@ -223,15 +223,14 @@
     "tmp_index = tmp[[\"population\"]]\n",
     "tmp_index.index = index\n",
     "tmp_index = tmp_index.unstack(level=-1)\n",
-    "# tmp_index.reset_index(drop=True)\n",
-    "# ss = dd.unstack(level=-1)\n",
+    "\n",
     "filtered_dataset = tmp_index.droplevel(level=0, axis=1).reset_index()\n",
     "filtered_dataset = filtered_dataset.rename(columns={2000: 'population_2000', 2100: 'population_2100'}, index={\"year\": \"index\"})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "4768563f-ca42-49df-b02d-4a380c2598ff",
    "metadata": {},
    "outputs": [],
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "4d24850f-64bf-4115-9301-b7553d5f53fe",
    "metadata": {},
    "outputs": [
@@ -401,7 +400,7 @@
        "[235 rows x 5 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "5cae615b-adc2-4253-871d-b305473871d8",
    "metadata": {},
    "outputs": [
@@ -617,15 +616,13 @@
        "[149 rows x 8 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged = pd.merge(world, filtered_dataset, how=\"inner\",\n",
-    "    left_on=\"name\",\n",
-    "    right_on=\"country\")\n",
+    "merged = pd.merge(world, filtered_dataset, how=\"inner\", left_on=\"name\", right_on=\"country\")\n",
     "merged"
    ]
   },
@@ -634,12 +631,12 @@
    "id": "7c746aa1-f7cb-42e6-aac2-15a094793ee3",
    "metadata": {},
    "source": [
-    " В яких країнах світу населення у 2100 році буде більшим, ніж було у 2000 році, а в яких меншим?"
+    "1) В яких країнах світу населення у 2100 році буде більшим, ніж було у 2000 році, а в яких меншим?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "413f7595-398f-4956-a724-947d2217a314",
    "metadata": {},
    "outputs": [
@@ -647,12 +644,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-22d638b6fa19470fafafb561ccd3a7eb\"></div>\n",
+       "<div id=\"altair-viz-0eb0f94f00504c44ab7db8b047d67187\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-22d638b6fa19470fafafb561ccd3a7eb\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-22d638b6fa19470fafafb561ccd3a7eb\");\n",
+       "    if (outputDiv.id !== \"altair-viz-0eb0f94f00504c44ab7db8b047d67187\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-0eb0f94f00504c44ab7db8b047d67187\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -701,7 +698,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,12 +717,12 @@
    "id": "7f557f32-0491-4f02-8be7-2036d95823bd",
    "metadata": {},
    "source": [
-    "- На скільки відсотків збільшиться або зменшиться населення кожної країни у 2100 році у порівнянні з 2000 роком?"
+    "2) На скільки відсотків збільшиться або зменшиться населення кожної країни у 2100 році у порівнянні з 2000 роком?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "0fd11a2d-85c5-4565-b9cc-2c8ad644c75c",
    "metadata": {},
    "outputs": [
@@ -733,12 +730,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-dc225529c3764fdb9f0c949af5fe1449\"></div>\n",
+       "<div id=\"altair-viz-528801c547fd4e138e73ae59b1eeb283\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-dc225529c3764fdb9f0c949af5fe1449\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-dc225529c3764fdb9f0c949af5fe1449\");\n",
+       "    if (outputDiv.id !== \"altair-viz-528801c547fd4e138e73ae59b1eeb283\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-528801c547fd4e138e73ae59b1eeb283\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -787,7 +784,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,12 +803,12 @@
    "id": "a8c608e9-8588-4ba7-bc9f-45b84029457b",
    "metadata": {},
    "source": [
-    "- Яким буде населення країн світу у 2100 році?"
+    "3) Яким буде населення країн світу у 2100 році?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "91995ac9-5481-4217-87cd-a9823c0edc3a",
    "metadata": {},
    "outputs": [
@@ -819,12 +816,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-74c40773777c4cceabfe047a331bc8ad\"></div>\n",
+       "<div id=\"altair-viz-094f471bd07442a3ab1c5fb13262b142\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-74c40773777c4cceabfe047a331bc8ad\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-74c40773777c4cceabfe047a331bc8ad\");\n",
+       "    if (outputDiv.id !== \"altair-viz-094f471bd07442a3ab1c5fb13262b142\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-094f471bd07442a3ab1c5fb13262b142\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -873,7 +870,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,6 +882,14 @@
     ")\n",
     "\n",
     "alt.layer(map_).properties(width = 900, height = 500, background = '#F9F9F9', padding = 25)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a42fdcd-0b99-4bbf-8394-58ba3c596684",
+   "metadata": {},
+   "source": [
+    "Оскільки ми працюємо з геоданними, в усіх трьох прикладах доречно використовувати карту, що поділяється на потрібні категорії за допомогою кольорів."
    ]
   }
  ],
